--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -15,7 +15,7 @@
   <button ion-button full icon-left (click)="createCode()"><ion-icon name="barcode"></ion-icon>create</button>
 
   <ion-card *ngIf="createdCode">
-    <ngx-qrcode [qrc-value]="createdCode"></ngx-qrcode>
+    <ngx-qrcode #qrcode [qrc-value]="createdCode"></ngx-qrcode>
     <ion-card-content>
       <p>Value: {{ createdCode }}</p>
     </ion-card-content>
